WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226901
[REGRESSION][Curl] Network::ResourceTiming are broken after
r278391
https://bugs.webkit.org/show_bug.cgi?id=226901
Summary
[REGRESSION][Curl] Network::ResourceTiming are broken after r278391
Yury Semikhatsky
Reported
2021-06-10 15:06:01 PDT
https://trac.webkit.org/changeset/278391/webkit
changed how InspectorNetworkAgent::buildObjectForTiming serializes NetworkLoadMetrics to the inspector protocol. millisecondsSinceFetchStart subtracts fetchStart to get relative values for most of the metrics. In Curl implementation fetchStart is always 0 which results in incorrect values sent over the protocol.
Attachments
Patch
(1.51 KB, patch)
2021-06-10 16:51 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2021-06-10 16:51:22 PDT
Created
attachment 431162
[details]
Patch
Fujii Hironori
Comment 2
2021-06-10 17:02:45 PDT
Don't you need to set redirectStart? Cocoa port does.
Fujii Hironori
Comment 3
2021-06-10 17:15:06 PDT
It would be great the following WinCairo test failures are fixed. fast/dom/webtiming.html [ Failure ] http/tests/misc/webtiming-cross-origin-redirect.py [ Failure ] http/tests/misc/webtiming-one-redirect.py [ Failure ] http/tests/misc/webtiming-two-redirects.py [ Failure ]
Yury Semikhatsky
Comment 4
2021-06-10 17:24:08 PDT
(In reply to Fujii Hironori from
comment #2
)
> Don't you need to set redirectStart? Cocoa port does.
I think you are write, I noticed that redirectSart was also missing but decided not to touch it since it was not a part of the regression, can add that too.
EWS
Comment 5
2021-06-10 20:37:26 PDT
Committed
r278752
(
238713@main
): <
https://commits.webkit.org/238713@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431162
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-06-10 20:38:21 PDT
<
rdar://problem/79176779
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug