[REGRESSION][Curl] Network::ResourceTiming are broken after r278391 https://bugs.webkit.org/show_bug.cgi?id=226901

Reviewed by Fujii Hironori.

Initialize fetchStart with startTime in Curl.

No new tests.

* platform/network/curl/CurlContext.cpp:
(WebCore::CurlHandle::getNetworkLoadMetrics):


Canonical link: https://commits.webkit.org/238713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278752 268f45cc-cd09-0410-ab3c-d52691b4dbfc